<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
  
  <!-- App-wide -->
  <string name="app_name">Variant Tap</string>
  
  <!-- Legal agreement dialog -->
  <string name="legal_agreement_title">Accept terms</string>
  <string name="legal_agreement_message">
    By using this app, you agree to the Variant Tap
    <a href="https://copperium-studios.github.io/variant-tap/terms.html">Terms of Service</a>
    and <a href="http://copperium-studios.github.io/variant-tap/privacy.html">Privacy Policy</a>.
    If you do not agree, please uninstall the app.
  </string>
  <string name="legal_agree">Agree</string>
  
  <!-- MainActivity -->
  <string name="main_title">@string/app_name</string>
  <string name="sound_on_desc">Turn sound off</string>
  <string name="sound_off_desc">Turn sound on</string>
  <string name="about_desc">About</string>
  <string name="leaderboard_desc">Leaderboards</string>
  <string name="achievements_desc">Achievements</string>
  <string name="remove_ads_desc">Remove ads</string>
  <string name="play">Play</string>
  
  <!-- AboutActivity -->
  <string name="consent_yes">You have consented to receive personalized ads.</string>
  <string name="consent_no">You have not consented to receive personalized ads.</string>
  <string name="consent_unknown">
    Somehow, you have not yet indicated whether or not you consent to receive personalized ads.
  </string>
  <string name="change_consent">Change your consent…</string>
  <string name="gpgs_sign_in">Sign in to Google Play</string>
  <string name="gpgs_sign_out">Sign out of Google Play</string>
  <string name="developer">Developer</string>
  <string name="developer_name">A game by Ryan Dancy.</string>
  <string name="music">Music</string>
  <string name="music_attrib">
    \"Shiny Tech II\" Kevin MacLeod (incompetech.com)
    \nLicensed under Creative Commons: By Attribution License
    \nhttp://creativecommons.org/licenses/by/3.0/
  </string>
  <string name="icons">Icons</string>
  <string name="icon_music_note_name">Music Note</string>
  <string name="icon_music_note_attrib">Hea Poh Lin (The Noun Project)</string>
  <string name="icon_information_name">Information</string>
  <string name="icon_information_attrib">Viktor Vorobyev (The Noun Project)</string>
  <string name="icon_trophy_name">Trophy</string>
  <string name="icon_trophy_attrib">Stanislav Levin (The Noun Project)</string>
  <string name="images">Images</string>
  <string name="images_attrib">
    Many thanks to http://openclipart.org and its contributors, who provided many public-domain
    vector graphics for this game.
  </string>
  <string name="legal">Legal</string>
  <!-- Also used here: @string/privacy_policy_link_text and @string/privacy_policy_url below  -->
  <string name="terms_link_text">Terms of Service</string>
  <string name="terms_url" translatable="false">https://copperium-studios.github.io/variant-tap/terms.html</string>
  
  <!-- GameActivity -->
  <string name="countdown_hint">Tap the image which is different than the others!</string>
  <string name="score_label">Score</string>
  <string name="pause_button_desc">Pause button</string>
  <string name="paused">Paused</string>
  <string name="unpause">Resume Game</string>
  <string name="quit">Quit Game</string>
  <string name="quit_message">Are you sure you want to quit the game?</string>
  <string name="quit_action">Yes, quit</string>
  
  <!-- PostGameActivity -->
  <string name="new_best_score">New Best Score!</string>
  <string name="easy_mode">Easy Mode</string>
  <string name="normal_mode">Normal Mode</string>
  <string name="hard_mode">Hard Mode</string>
  <string name="best_score">Best</string>
  <string name="average_score">Average</string>
  <string name="play_again">Play Again</string>
  <string name="leaderboard_button_caption">Leaderboards</string>
  <string name="achievements_button_caption">Achievements</string>
  
  <!-- DifficultyButtonsFragment -->
  <string name="easy">Easy</string>
  <string name="normal">Normal</string>
  <string name="hard">Hard</string>
  
  <!-- EU consent dialog -->
  <string name="eu_consent_intro">
    We care about your privacy and data security. We keep this app free by showing you ads.
  </string>
  <string name="eu_consent_question">
    Can we continue to use your data to tailor ads for you?
  </string>
  <string name="eu_consent_meat">
    You can change your choice anytime in the About screen. Google and its partners will collect
    data and use a unique identifier on your device to show you ads.
  </string>
  <string name="eu_consent_learn_more">
    Learn more about how your data is used.
  </string>
  <string name="eu_consent_yes">Yes, continue to see relevant ads</string>
  <string name="eu_consent_no">No, see ads that are less relevant</string>
  <string name="eu_consent_remove">Remove ads</string>
  <string name="eu_consent_selected_yes">
    The ads that you see will be relevant to you.
  </string>
  <string name="eu_consent_selected_no">
    The ads that you see will be less relevant to you.
  </string>
  <string name="privacy_policy_link_text">Privacy policy</string>
  <string name="privacy_policy_url" translatable="false">
    https://copperium-studios.github.io/variant-tap/privacy.html
  </string>
  <string name="how_data_used">
    With your consent, for the purpose of serving ads, your data is shared with Google and its
    partners:
  </string>
  
  <!-- Miscellaneous -->
  <string name="close">Close</string>
  <string name="gpgs_action_intent_failed">Failed to retrieve Google Play Games content</string>
</resources>