<?xml version="1.0" encoding="utf-8"?>
<!-- A consent dialog for EU users. Loosely based on Google's Consent SDK default dialog
     (https://developers.google.com/admob/android/eu-consent) and lenooh's StackOverflow answer at
     https://stackoverflow.com/a/50556255. -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/dialog_padding">
    
    <TextView
        style="@style/DialogText.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eu_consent_intro" />
    
    <TextView
        style="@style/DialogText.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eu_consent_question" />
    
    <TextView
        style="@style/DialogText.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eu_consent_meat" />
    
    <!-- Text added programmatically for hyperlink style -->
    <TextView
        android:id="@+id/eu_consent_learn_more"
        style="@style/DialogText.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/eu_consent_yes_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/consent_option_spacing"
        android:text="@string/eu_consent_yes" />
    
    <Button
        android:id="@+id/eu_consent_no_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/consent_option_spacing"
        android:text="@string/eu_consent_no" />
    
    <Button
        android:id="@+id/eu_consent_remove_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/consent_option_spacing"
        android:text="@string/eu_consent_remove" />
    
  </LinearLayout>
  
</ScrollView>