<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/difficulty_button_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:paddingLeft="@dimen/difficulty_buttons_margin_side"
    android:paddingRight="@dimen/difficulty_buttons_margin_side"
    android:scrollbars="vertical"
    tools:context="ca.keal.varianttap.ui.DifficultyButtonsFragment">
  
  <Button
      android:id="@+id/play_button"
      style="@style/FullLengthButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:background="@drawable/play_button_transition"
      android:paddingBottom="@dimen/full_length_buttons_text_padding"
      android:paddingTop="@dimen/full_length_buttons_text_padding" />
  
  <LinearLayout
      android:id="@+id/difficulty_button_layout"
      style="?android:attr/buttonBarStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@id/play_button"
      android:layout_marginBottom="@dimen/difficulty_buttons_spacing"
      android:orientation="vertical"
      android:visibility="invisible">
    
    <Button
        android:id="@+id/easy_button"
        style="@style/FullLengthButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/full_length_buttons_text_padding"
        android:paddingTop="@dimen/full_length_buttons_text_padding"
        android:text="@string/easy" />
    
    <Button
        android:id="@+id/normal_button"
        style="@style/FullLengthButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/difficulty_buttons_spacing"
        android:paddingBottom="@dimen/full_length_buttons_text_padding"
        android:paddingTop="@dimen/full_length_buttons_text_padding"
        android:text="@string/normal" />
    
    <Button
        android:id="@+id/hard_button"
        style="@style/FullLengthButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/difficulty_buttons_spacing"
        android:paddingBottom="@dimen/full_length_buttons_text_padding"
        android:paddingTop="@dimen/full_length_buttons_text_padding"
        android:text="@string/hard" />
    
  </LinearLayout>
  
</RelativeLayout>