<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pausedBackground">
  
  <TextView
      android:id="@+id/paused_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layerType="software"
      android:text="@string/paused"
      android:textColor="@color/textLight"
      android:textSize="@dimen/paused_text_size"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.325"
      tools:ignore="SpUsage" />
  
  <Button
      android:id="@+id/unpause_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/button_margin_sides"
      android:layout_marginRight="@dimen/button_margin_sides"
      android:background="@color/gamePausedMain"
      android:onClick="startUnpause"
      android:text="@string/unpause"
      android:textColor="@color/textLight"
      android:textSize="@dimen/button_text_size"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.625" />
  
  <Button
      android:id="@+id/quit_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:background="@android:color/transparent"
      android:onClick="quit"
      android:text="@string/quit"
      android:textColor="@color/textSubtleOnDark"
      android:textSize="@dimen/button_text_size"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/unpause_button" />
  
  <TextView
      android:id="@+id/unpause_countdown_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/textLight"
      android:textSize="@dimen/unpause_countdown_text_size"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.5"
      tools:ignore="SpUsage" />
  
</android.support.constraint.ConstraintLayout>