<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context="ca.keal.varianttap.GameActivity">
  
  <!-- Note that if donut_text is ever >5 characters it'll exceed the width of the donut -->
  <com.github.lzyzsd.circleprogress.DonutProgress
      android:id="@+id/countdown_circle"
      android:layout_width="@dimen/countdown_circle_diameter"
      android:layout_height="@dimen/countdown_circle_diameter"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_margin="@dimen/countdown_circle_margin"
      app:donut_circle_starting_degree="-90"
      app:donut_finished_color="@color/countdownCircleFinished"
      app:donut_finished_stroke_width="@dimen/countdown_circle_width"
      app:donut_progress="100"
      app:donut_suffix_text=""
      app:donut_text=""
      app:donut_text_color="@color/countdownCircleText"
      app:donut_text_size="@dimen/countdown_circle_text_size"
      app:donut_unfinished_color="@color/countdownCircleUnfinished"
      app:donut_unfinished_stroke_width="@dimen/countdown_circle_width" />
  
  <android.support.v7.widget.GridLayout
      android:id="@+id/imgs_grid"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:clipChildren="false"
      android:clipToPadding="false"
      android:padding="@dimen/grid_padding" />
  
  <TextView
      android:id="@+id/starting_countdown_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:paddingBottom="@dimen/starting_countdown_text_offset"
      android:textColor="@color/colorPrimary"
      android:textSize="@dimen/starting_countdown_text_size"
      tools:ignore="SpUsage" />
  
  <TextView
      android:id="@+id/starting_countdown_hint"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/starting_countdown_text"
      android:layout_centerHorizontal="true"
      android:layout_marginLeft="@dimen/starting_countdown_hint_margin_sides"
      android:layout_marginRight="@dimen/starting_countdown_hint_margin_sides"
      android:layout_marginTop="@dimen/starting_countdown_hint_margin_top"
      android:text="@string/countdown_hint"
      android:textAlignment="center"
      android:textColor="@color/textDark"
      android:textSize="20sp" />
  
  <TextView
      android:id="@+id/score_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:paddingBottom="@dimen/score_text_margin_bottom"
      android:text="0"
      android:textColor="@color/gameMain"
      android:textSize="@dimen/score_text_size"
      tools:ignore="HardcodedText" />
  
  <TextView
      android:id="@+id/score_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@id/score_text"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="-20dp"
      android:text="@string/score_label"
      android:textColor="@color/gameMain"
      android:textSize="20sp" />
  
  <ImageButton
      android:id="@+id/pause_button"
      android:layout_width="@dimen/pause_button_width"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_alignParentTop="true"
      android:layout_margin="@dimen/pause_button_margin"
      android:adjustViewBounds="true"
      android:background="@android:color/transparent"
      android:contentDescription="@string/pause_button_desc"
      android:onClick="pause"
      android:scaleType="fitCenter"
      android:src="@drawable/pause"
      android:visibility="invisible"
      tools:ignore="RtlHardcoded" />
  
  <include
      android:id="@+id/pause_overlay"
      layout="@layout/game_paused"
      android:visibility="invisible" />
  
</RelativeLayout>